<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context="com.example.natashafinnegan.nihapp.mainActivity"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/appName"
            android:text="@string/appName"
            android:textColor="@color/background"
            android:layout_gravity="center"
            android:textSize="58dp"
            android:layout_marginTop="40dp"
            />


        <!--Tutorial-->
        <Button
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:id="@+id/tutorialButton"
            android:text="@string/tutorialButton"
            android:backgroundTint="@color/background"
            android:onClick="onClick"
            />

        <!--Create Consultation-->
        <Button
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:id="@+id/emailButton"
            android:text="@string/teleconsultButton"
            android:backgroundTint="@color/background"
            android:onClick="onClick"
            />


        <Button
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/background"
            android:onClick="onClick"
            />

    </LinearLayout>
